@@ -1,3 +1,7 @@
+* Wed Apr 21 2021 Steven Pritchard <steven.pritchard@onyxpoint.com> - 3.1.5-0
+- Fix and document `compliance_markup::debug::dump` and
+  `compliance_markup::debug::hiera_backend_compile_time` keys
+
 * Thu Apr 08 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.1.5-0
 - Fix data recursion issues
 
